# honbaek

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/specs/: 2026-05-08-honbaek-gangryeong.md  2026-05-08-kaeyi-extension.md  2026-05-09-gyeryeong-extension.md
scripts/: smoke.sh
src/: cli.rs  completions.rs  config.rs  daemon.rs  domain.rs  executor.rs  ipc.rs  journal.rs  lib.rs  main.rs  provider.rs  service.rs  storage.rs  tools.rs  tui.rs
